Bug #9038
closedinstance_eval throws RuntimeError for bad syntax (regression from 2.0.0)
Description
In Ruby 2.1.0dev (2013-10-20 trunk 43373), instance_eval throws a RuntimeError when it should throw a SyntaxError, but only the first time it is called. If you use an IRB session to call instance_eval a second time with the exact same arguments, it produces the expected SyntaxError instead of .
Here is an example: ruby -e "instance_eval('/unquoted/string/syntax/error')"
That example raises a SyntaxError on Ruby 2.0.0p247, but raises a RuntimeError on 2.1.0dev (2013-10-20 trunk 43373).
Files
Updated by nobu (Nobuyoshi Nakada) over 12 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r43376.
André, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
encoding.c: preserve outer errinfo
- encoding.c (
load_encoding): should preserve outererrinfo, so that
expected exception may not be lost. [ruby-core:57949] [Bug #9038]
Updated by nagachika (Tomoyuki Chikanaga) over 12 years ago
- Backport changed from 1.9.3: UNKNOWN, 2.0.0: UNKNOWN to 1.9.3: UNKNOWN, 2.0.0: REQUIRED
Even though this issue is not reproducible with 2.0.0, the same flaw exists on ruby_2_0_0. I'll backport r43376 to fix a potential bug.
Updated by nagachika (Tomoyuki Chikanaga) over 12 years ago
- Backport changed from 1.9.3: UNKNOWN, 2.0.0: REQUIRED to 1.9.3: UNKNOWN, 2.0.0: DONE
r43376 is backported to ruby_2_0_0 branch at r43414. I modify test code not to use new assertion of Test::Unit.
Updated by nobu (Nobuyoshi Nakada) almost 12 years ago
- Description updated (diff)